added some animation and corrected the tooltips to use MDB

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,6 +1,6 @@
 <div class="row text-center justify-content-md-center">
   <div class="col-xs-12 col-sm-6 col-md-3 vertical-center">
-    <mdb-card>
+    <mdb-card class="animated fadeInLeft">
       <mdb-card-body class="text-center">
         <h2>Anmelden</h2>
         <form [formGroup]="validationForm" (ngSubmit)="onSubmit()">
