--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -9,19 +9,19 @@
       </tr>
       <tr>
         <td><strong>Masse:</strong></td>
-        <td>{{selectedStar.solarMass}} <em tooltip="Sonnenmasse">M☉</em></td>
+        <td>{{selectedStar.solarMass}} <em mdbTooltip="Sonnenmasse" placement="top">M☉</em></td>
       </tr>
       <tr>
         <td><strong>Radius:</strong></td>
-        <td>{{selectedStar.solarRadius}} <em tooltip="Sonnenradius">R☉</em></td>
+        <td>{{selectedStar.solarRadius}} <em mdbTooltip="Sonnenradius" placement="top">R☉</em></td>
       </tr>
       <tr>
         <td><strong>Effektive Temperatur: </strong></td>
-        <td>{{selectedStar.effectiveTemperature}} <em tooltip="Kelvin">K</em></td>
+        <td>{{selectedStar.effectiveTemperature}} <em mdbTooltip="Kelvin" placement="top">K</em></td>
       </tr>
       <tr>
         <td><strong>Entfernung zur Erde: </strong></td>
-        <td>{{selectedStar.distance}} <em tooltip="Lichtjahr">Lj</em></td>
+        <td>{{selectedStar.distance}} <em mdbTooltip="Lichtjahr" placement="top">Lj</em></td>
       </tr>
       </tbody>
     </table>
