--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,6 +3,8 @@
   <mdb-navbar-brand>
     <a class="navbar-brand" role="button" routerLink="">Sterne&Planeten</a>
   </mdb-navbar-brand>
+  <!-- Separator Icon-->
+  <mdb-icon fas icon="grip-lines-vertical" size="lg" class="text-white mr-auto d-flex align-self-center pr-3 pl-3"></mdb-icon>
 
 
   <!-- Links -->
@@ -37,7 +39,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link waves-light" role="button" href="https://github.com/valentinprotiuc/stars-and-planets">
-          <mdb-icon fab icon="github"></mdb-icon>
+          <mdb-icon fab icon="github" size="lg" class="text-white"></mdb-icon>
         </a>
       </li>
     </ul>
