--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -10,7 +10,7 @@
         <mdb-icon fas icon="pen"></mdb-icon>
         Bearbeiten
       </button>
-      <button type="button" mdbBtn color="primary" mdbWavesEffect (click)="onRemoveStar()"
+      <button type="button" mdbBtn color="purple" mdbWavesEffect (click)="onRemoveStar()"
               [disabled]="!auth.isLoggedIn()">
         <mdb-icon fas icon="minus"></mdb-icon>
         Entfernen
